# sefixlines

./: .gitignore  README.md  image_classification.ipynb  pyproject.toml  requirements.txt  solution.ipynb  text_classification.ipynb
classification/: data.py  model.py
image_classification/: data.py  model.py
notebooks/: image_classification.ipynb  image_semantic_segmentation.ipynb  solution.ipynb  text_classification.ipynb
notebooks/image_classification/: config.py  data.py  model.py
sefixlines/: __init__.py  baseline.py  data.py  datasets.py  models.py  utils.py
sefixlines/notebooks/: image_classification.ipynb  image_regression.ipynb  image_semantic_segmentation.ipynb  raw.ipynb  text_classification.ipynb  text_regression.ipynb
src/: data.py  model.py
utils/: data.py  model.py
