[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sefixlines"
version = "0.1.9"
description = "Инструмент для быстрого решения ML задач, с оптимизацией обучения моделей и большим спектром возможностей"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "sefixnep", email = "rodionovs337@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "Pillow>=8.3.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "segmentation-models-pytorch>=0.3.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Homepage = "https://pypi.org/project/sefixlines/"
Repository = "https://github.com/sefixnep/sefixlines"
"Bug Tracker" = "https://github.com/sefixnep/sefixlines/issues"

[tool.setuptools]
packages = ["sefixlines"]

[tool.setuptools.package-data]
sefixlines = ["notebooks/*.ipynb"]

